plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.4'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'com.epages.restdocs-api-spec' version '0.19.4'
}

group = 'com.meetup'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

ext {
	set('springCloudVersion', '2024.0.1')
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

repositories {
	mavenCentral()
}

apply from: "gradle/spring.gradle"
apply from: "gradle/database.gradle"
apply from: "gradle/docs.gradle"
apply from: "gradle/util.gradle"
apply from: "gradle/test.gradle"
apply from: "gradle/config.gradle"
apply from: "gradle/jwt.gradle"

